--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,7 +1,9 @@
 {
-    "files.associations": {
-        "unordered_map": "cpp",
-        "ratio": "cpp",
-        "iostream": "cpp"
-    }
+  "files.associations": {
+    "unordered_map": "cpp",
+    "ratio": "cpp",
+    "iostream": "cpp",
+    "iterator": "cpp",
+    "vector": "cpp"
+  }
 }
